# docs/swagger.json
@@ -1,7 +1,97 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "RESTful API endpoints for Image Conversion",
+        "title": "Image Converter API",
+        "contact": {},
+        "version": "1.0"
     },
-    "paths": {}
+    "basePath": "/api/v1/",
+    "paths": {
+        "/image": {
+            "post": {
+                "description": "Convert an image to a specified format",
+                "consumes": [
+                    "multipart/form-data",
+                    " application/json"
+                ],
+                "produces": [
+                    "multipart/form-data"
+                ],
+                "tags": [
+                    "Image"
+                ],
+                "summary": "Convert an image",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Image file to convert",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "description": "Conversion configuration details",
+                        "name": "params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/requests.ImageRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Conversion successful",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Error"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "requests.ImageRequest": {
+            "type": "object",
+            "properties": {
+                "back_color": {
+                    "type": "string",
+                    "example": "#000000"
+                },
+                "fore_color": {
+                    "type": "string",
+                    "example": "#FFFFFF"
+                }
+            }
+        },
+        "responses.Error": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.Message": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
